# cvg-protocol

./: .gitignore  pyproject.toml  requirements.txt
src/cvg_protocol/: __init__.py
src/cvg_protocol/objects/: __init__.py
